{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 162,
  "lineage": "4653457f-6116-d8c5-20b9-1de3d8e4134c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_prod_controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/networkInterfaces/nic_prod_controller",
            "internal_domain_name_suffix": "hniqjflhdieejpewgj2vkkjuag.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic_controller_config",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/publicIPAddresses/pubip_controller",
                "subnet_id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/virtualNetworks/vnet_prod_controller/subnets/subnet_controller_prod_internal"
              }
            ],
            "location": "centralus",
            "name": "nic_prod_controller",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "production_group"
          },
          "dependencies": [
            "azurerm_public_ip.pubip_controller",
            "azurerm_resource_group.prod_group",
            "azurerm_subnet.subnet_prod_controller",
            "azurerm_virtual_network.vnet_prod_controller"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_prod_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/networkInterfaces/nic_prod_node_0",
            "internal_domain_name_suffix": "1gihloxja1oupoxhvuorvpelyh.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic_node_0_config",
                "primary": true,
                "private_ip_address": "10.0.1.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/publicIPAddresses/pubip_node_web",
                "subnet_id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/virtualNetworks/vnet_prod/subnets/subnet_prod_internal"
              }
            ],
            "location": "centralus",
            "name": "nic_prod_node_0",
            "private_ip_address": "10.0.1.10",
            "private_ip_addresses": [
              "10.0.1.10"
            ],
            "resource_group_name": "production_group"
          },
          "dependencies": [
            "azurerm_public_ip.pubip_node_web",
            "azurerm_resource_group.prod_group",
            "azurerm_subnet.subnet_prod",
            "azurerm_virtual_network.vnet_prod"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/networkInterfaces/nic_prod_node_1",
            "internal_domain_name_suffix": "1gihloxja1oupoxhvuorvpelyh.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic_node_1_config",
                "primary": true,
                "private_ip_address": "10.0.1.11",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/virtualNetworks/vnet_prod/subnets/subnet_prod_internal"
              }
            ],
            "location": "centralus",
            "name": "nic_prod_node_1",
            "private_ip_address": "10.0.1.11",
            "private_ip_addresses": [
              "10.0.1.11"
            ],
            "resource_group_name": "production_group"
          },
          "dependencies": [
            "azurerm_public_ip.pubip_node_web",
            "azurerm_resource_group.prod_group",
            "azurerm_subnet.subnet_prod",
            "azurerm_virtual_network.vnet_prod"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/networkInterfaces/nic_prod_node_2",
            "internal_domain_name_suffix": "1gihloxja1oupoxhvuorvpelyh.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic_node_2_config",
                "primary": true,
                "private_ip_address": "10.0.1.12",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/virtualNetworks/vnet_prod/subnets/subnet_prod_internal"
              }
            ],
            "location": "centralus",
            "name": "nic_prod_node_2",
            "private_ip_address": "10.0.1.12",
            "private_ip_addresses": [
              "10.0.1.12"
            ],
            "resource_group_name": "production_group"
          },
          "dependencies": [
            "azurerm_public_ip.pubip_node_web",
            "azurerm_resource_group.prod_group",
            "azurerm_subnet.subnet_prod",
            "azurerm_virtual_network.vnet_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "prod_sga_controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/networkInterfaces/nic_prod_controller|/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/networkSecurityGroups/prod_security_group_controller",
            "network_interface_id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/networkInterfaces/nic_prod_controller",
            "network_security_group_id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/networkSecurityGroups/prod_security_group_controller"
          },
          "dependencies": [
            "azurerm_network_interface.nic_prod_controller",
            "azurerm_network_security_group.prod_security_group_controller",
            "azurerm_public_ip.pubip_controller",
            "azurerm_resource_group.prod_group",
            "azurerm_subnet.subnet_prod_controller",
            "azurerm_virtual_network.vnet_prod_controller"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "prod_sga_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/networkInterfaces/nic_prod_node_0|/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/networkSecurityGroups/prod_security_group_nodes",
            "network_interface_id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/networkInterfaces/nic_prod_node_0",
            "network_security_group_id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/networkSecurityGroups/prod_security_group_nodes"
          },
          "dependencies": [
            "azurerm_network_interface.nic_prod_nodes",
            "azurerm_network_security_group.prod_security_group_nodes",
            "azurerm_public_ip.pubip_node_web",
            "azurerm_resource_group.prod_group",
            "azurerm_subnet.subnet_prod",
            "azurerm_virtual_network.vnet_prod"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/networkInterfaces/nic_prod_node_1|/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/networkSecurityGroups/prod_security_group_nodes",
            "network_interface_id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/networkInterfaces/nic_prod_node_1",
            "network_security_group_id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/networkSecurityGroups/prod_security_group_nodes"
          },
          "dependencies": [
            "azurerm_network_interface.nic_prod_nodes",
            "azurerm_network_security_group.prod_security_group_nodes",
            "azurerm_public_ip.pubip_node_web",
            "azurerm_resource_group.prod_group",
            "azurerm_subnet.subnet_prod",
            "azurerm_virtual_network.vnet_prod"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/networkInterfaces/nic_prod_node_2|/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/networkSecurityGroups/prod_security_group_nodes",
            "network_interface_id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/networkInterfaces/nic_prod_node_2",
            "network_security_group_id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/networkSecurityGroups/prod_security_group_nodes"
          },
          "dependencies": [
            "azurerm_network_interface.nic_prod_nodes",
            "azurerm_network_security_group.prod_security_group_nodes",
            "azurerm_public_ip.pubip_node_web",
            "azurerm_resource_group.prod_group",
            "azurerm_subnet.subnet_prod",
            "azurerm_virtual_network.vnet_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "prod_security_group_controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/networkSecurityGroups/prod_security_group_controller",
            "location": "centralus",
            "name": "prod_security_group_controller",
            "resource_group_name": "production_group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.1.1.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "env": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.prod_group",
            "azurerm_subnet.subnet_prod_controller",
            "azurerm_virtual_network.vnet_prod_controller"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "prod_security_group_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/networkSecurityGroups/prod_security_group_nodes",
            "location": "centralus",
            "name": "prod_security_group_nodes",
            "resource_group_name": "production_group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.1.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.1.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.1.10/32",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP-APP",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.1.11/32",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP-API",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.10/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.1.12/32",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "MYSQL",
                "priority": 103,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.11/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "env": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.prod_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pubip_controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/publicIPAddresses/pubip_controller",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.69.143.71",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "pubip_controller",
            "resource_group_name": "production_group",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Production"
            }
          },
          "dependencies": [
            "azurerm_resource_group.prod_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pubip_node_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/publicIPAddresses/pubip_node_web",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.69.137.138",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "pubip_node_web",
            "resource_group_name": "production_group",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Production"
            }
          },
          "dependencies": [
            "azurerm_resource_group.prod_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/16"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/virtualNetworks/vnet_prod/subnets/subnet_prod_internal",
            "name": "subnet_prod_internal",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "production_group",
            "virtual_network_name": "vnet_prod"
          },
          "dependencies": [
            "azurerm_resource_group.prod_group",
            "azurerm_virtual_network.vnet_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_prod_controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/virtualNetworks/vnet_prod_controller/subnets/subnet_controller_prod_internal",
            "name": "subnet_controller_prod_internal",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "production_group",
            "virtual_network_name": "vnet_prod_controller"
          },
          "dependencies": [
            "azurerm_resource_group.prod_group",
            "azurerm_virtual_network.vnet_prod_controller"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ba7590d9-06e9-47dd-bae7-ad1d1abc8bc7",
            "id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/virtualNetworks/vnet_prod",
            "location": "centralus",
            "name": "vnet_prod",
            "resource_group_name": "production_group"
          },
          "dependencies": [
            "azurerm_resource_group.prod_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_prod_controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9504513b-1a67-4408-bc96-327955293406",
            "id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/virtualNetworks/vnet_prod_controller",
            "location": "centralus",
            "name": "vnet_prod_controller",
            "resource_group_name": "production_group"
          },
          "dependencies": [
            "azurerm_resource_group.prod_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet_controller_to_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/virtualNetworks/vnet_prod_controller/virtualNetworkPeerings/vnet-controller-to-prod",
            "name": "vnet-controller-to-prod",
            "remote_virtual_network_id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/virtualNetworks/vnet_prod",
            "resource_group_name": "production_group",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet_prod_controller"
          },
          "dependencies": [
            "azurerm_resource_group.prod_group",
            "azurerm_virtual_network.vnet_prod",
            "azurerm_virtual_network.vnet_prod_controller"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet_prod_to_controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/virtualNetworks/vnet_prod/virtualNetworkPeerings/vnet-prod-to-controller",
            "name": "vnet-prod-to-controller",
            "remote_virtual_network_id": "/subscriptions/c20f51b2-62aa-4af4-8033-ed6246ab50ca/resourceGroups/production_group/providers/Microsoft.Network/virtualNetworks/vnet_prod_controller",
            "resource_group_name": "production_group",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet_prod"
          },
          "dependencies": [
            "azurerm_resource_group.prod_group",
            "azurerm_virtual_network.vnet_prod",
            "azurerm_virtual_network.vnet_prod_controller"
          ]
        }
      ]
    }
  ]
}